servicemesh/gray-releasing/gray-chain-spring-cloud-tencent/deploy/gray-chain-releasing-senario-1/k8s/04-envoy-lds-config.yaml
#  Tencent is pleased to support the open source community by making Polaris available.
#  Copyright (C) 2019 THL A29 Limited, a Tencent company. All rights reserved.
#  Licensed under the BSD 3-Clause License (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#  https://opensource.org/licenses/BSD-3-Clause
#  Unless required by applicable law or agreed to in writing, software distributed
#  under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR
#  CONDITIONS OF ANY KIND, either express or implied. See the License for the
#  specific language governing permissions and limitations under the License.

apiVersion: v1
data:
  lds.yaml: |-
      resources:
        - '@type': type.googleapis.com/envoy.config.listener.v3.Listener
          name: listener_15001
          address:
            socket_address:
              address: 0.0.0.0
              port_value: 15001
          filter_chains:
            - filters:
                - name: envoy.http_connection_manager
                  typed_config:
                    '@type': >-
                      type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                    stat_prefix: http
                    http_filters:
                      - name: envoy.router
                        typed_config:
                          '@type': >-
                            type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                    route_config:
                      name: local_route
                      virtual_hosts:
                        - name: gray_service
                          domains:
                            - base.service.com
                          routes:
                            - match:
                                prefix: /
                                headers:
                                  - name: uid
                                    exact_match: '200'
                              route:
                                cluster: user
                                metadata_match:
                                  filter_metadata:
                                    envoy.lb:
                                      version: v2.0.0
                              request_headers_to_add:
                                - header:
                                    key: gray
                                    value: 'true'
                            - match:
                                prefix: /
                              route:
                                cluster: user
                                metadata_match:
                                  filter_metadata:
                                    envoy.lb:
                                      version: v1.0.0


kind: ConfigMap
metadata:
  name: lds-config
  namespace: envoy-test
